[gd_scene load_steps=4 format=3 uid="uid://ll4yu73jr284"]

[ext_resource type="Script" uid="uid://67nrvabq7x7t" path="res://scenes/boss/boss.gd" id="1_dlmty"]
[ext_resource type="Texture2D" uid="uid://tw8t38ns0seh" path="res://icon.svg" id="2_8ftqf"]
[ext_resource type="PackedScene" uid="uid://dlhc3hcdbix46" path="res://scenes/boss/bullet_boss.tscn" id="2_atjq5"]

[node name="Boss" type="Node2D"]
script = ExtResource("1_dlmty")
bullet_scene = ExtResource("2_atjq5")

[node name="BulletSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath(".")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8ftqf")

[node name="LeftEye" type="Marker2D" parent="."]
position = Vector2(-21, 2)

[node name="RightEye" type="Marker2D" parent="."]
position = Vector2(21, 2)

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(0, 27)
